# alice

./: .gitattributes  .gitignore  README copy.md  README.md  llama2-13b_all_results.json  llama3-3b_all_results.json  pyproject.toml
configs/: README-ZH.md  README.md
configs/cluster/: all_devices.yaml  devices.example.yaml  single_3060.example.yaml
configs/model/: aya_8b.yaml  llama2_13b.yaml  llama2_7b.yaml  llama3_3b.yaml  llama3_8b.yaml  mistral_7b.yaml
configs/runtime/: runtime.example.yaml
design_docs/: 01_architecture_overview.md  02_data_contracts.md  03_scheduler_design.md  04_runtime_grpc_design.md  06_real_execution_no_weights.md  07_migration_and_validation.md  09_runtime_implementation_status.md  10_pipeline_des_simulator.md  README-ZH.md  README.md  仓库功能与端到端工作流.md
docs/: 01_architecture_overview.md  02_data_contracts.md  04_runtime_grpc_design.md  05_transport_ab_plan.md  07_migration_and_validation.md  08_tinyvllm_phase2_boundary.md  09_runtime_implementation_status.md
my_profiles/: llama2-7b_all_results.json
my_profiles/example/: 2080super-llama2-7b_all_results.json  (+3 more)
pp_nextgen/: IO_FORMATS_AND_CLEANUP-ZH.md  IO_FORMATS_AND_CLEANUP.md  README-ZH.md  README.md  __init__.py  config_loader.py  utils.py
profiling/: INTERFACES.md  README.md
runtime/: README.md
scheduler/: INTERFACES.md  README.md
scripts/: submit_task_to_master.py
tools/: README-ZH.md  README.md  __init__.py  benchmark_strategy.py  build_registry.py  capture_split_module_profiles.py  gen_runtime_proto.py  run_cluster_sim.py  run_transport_benchmark.py  solve_strategy.py
(+357 files in other folders)
